modal and spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,18 @@
 body {
   font-family: "Rubik", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+fieldset {
+  border: 0;
+}
+label {
+  display: block;
+  margin: 30px 0 0 0;
+}
+/* .overflow {
+  height: 200px;
+} */
+
+label {
+  color: white;
+}
